# automaton_auditor_project_tenx

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_tools.py  ui_app.py
audit/report_bypeer_received/: audit_report_bypeer.md
audit/report_onpeer_generated/: audit_report_onpeer.md
audit/report_onself_generated/: FINAL_AUDIT_YAKOB.md  audit_report.md  audit_report_yakobd.md  ephrata1888_audit_report.md  yakobd_audit_report.md
reports/: audit_report_YohannesDereje.md  audit_results.md  final_report.md
result/: audit_report_YohannesDereje.md  audit_report_yakobd.md  audit_result.md
src/: graph.py  state.py
src/nodes/: defense.py  detectives.py  judge.py  judges.py  justice.py  prosecutor.py  tech_lead.py
src/tools/: doc_tools.py  repo_tools.py
tests/: test_state.py
